tests/invalid/module/use_unknown_path.facet
use missing::id;

fn main() -> affine isize {
  (id 1)
}
